--- a/style-contact.css
+++ b/style-contact.css
@@ -15,6 +15,24 @@ header {
     z-index: 1000;
 }
 
+.contact-hero h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #ffcc00;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+}
+
+.contact-hero p {
+    background: rgba(0, 0, 0, 0.5);
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.contact-hero p {
+    font-size: 1.2rem;
+}
+
 nav ul {
     list-style: none;
     display: flex;
@@ -53,9 +71,3 @@ nav ul li a:hover, .active {
     height: 100%;
     background: rgba(0, 0, 0, 0.4); /* 半透明黑色遮罩 */
 }
-
-
-.contact-hero h1 {
-    font-size: 2.5rem;
-    color: #ffcc00;
-    text-shadow: 2px 
